--- a/work.html
+++ b/work.html
@@ -2,87 +2,52 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>work</title>
-        <link href="css/styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/index.css">
+        <title>Portfolio - Work</title>
     </head>
     <body>
-        <header>
-            <div class="header-content">
-                <div class="header-logo">
-                    <div class="logo-container">
-                        <div class="logo-img"><a class="logo-link" href="index.html"><img src="images/portfolio-logo.png" alt="portfolio logo"></a></div>
-                        <div class="logo-text"><a class="logo-link" href="index.html">Victor's Portfolio</a></div>
-                    </div> <!-- logo-container -->
-                </div> <!-- header-logo -->
-                <div class="header-menu">
-                    <div class="menu-container">
-                        <div><a href="index.html">Home</a></div>
-                        <div><a href="about.html">About/CV</a></div>
-                        <div><a href="work.html">Work</a></div>
-                        <div><a href="contact.html">Contact</a></div>
-                    </div> <!-- menu-container -->
-                </div> <!-- header-menu -->
-            </div>
-            <div class="bottom-border"></div>
-        </header>
-        <main>
-            <div class="top-border"></div>
-            <div class="main-content">
-                <h1>My work</h1>
-                <p>Here is an overview of what I've worked on. Group projects, personal projects, big stuff and small stuff!</p>
-                <h2>Group Projects</h2>
-                <div class="group-item">
-                    <div class="item-img">
-                        <img src="images/vasa-knekkebrod-logo.png" alt="VASA Knekkebrod logo">
-                    </div>
-                    <div class="item-text">
-                        <h3>VASA Knekkebrod</h3>
-                        <p>Landing page.</p>
-                        <p>Created by:
-                            <a href="https://github.com/AlexanderKodehode">Alexander</a>,
-                            <a href="https://github.com/Andrekode">André</a>,
-                            <a href="https://github.com/SanderTZZ">Sander</a>,
-                            <a href="https://github.com/victor-kodehode">Victor</a>
-                        </p>
-                    </div>
-                    <div class="item-links">
-                        <div><a href="https://github.com/victor-kodehode/VASA-Knekkebrod">github</a></div>
-                        <div><a href="https://victor-kodehode.github.io/VASA-Knekkebrod/">website</a></div>
-                    </div>
-                </div> <!-- group-item -->
-                <div class="group-item">
-                    <div class="item-img">
-                        <img src="images/santa-hunters-logo.png" alt="Santa Hunters logo">
-                    </div>
-                    <div class="item-text">
-                        <h3>Santa Hunters</h3>
-                        <p>Christmas themed website.</p>
-                        <p>Created by:
-                            <a href="https://github.com/Marius-Kodehode">Marius</a>,
-                            <a href="https://github.com/Martin-Kodehode">Martin</a>,
-                            <a href="https://github.com/Simon-Hes">Simon</a>,
-                            <a href="https://github.com/victor-kodehode">Victor</a>
-                        </p>
-                    </div>
-                    <div class="item-links">
-                        <div><a href="https://github.com/victor-kodehode/julenissen">github</a></div>
-                        <div><a href="https://victor-kodehode.github.io/julenissen/">website</a></div>
-                    </div>
-                </div> <!-- group-item -->
-                <h2>Course Work</h2>
-                <ul>
-                    <li><a href="https://github.com/victor-kodehode/text-based-battle-game">Python text based battle game</a></li>
-                    <li><a href="https://github.com/victor-kodehode/boolean-guesser-game">JavaScript boolean guesser game</a></li>
-                </ul>
-                <h2>Personal Projects</h2>
-                <p>work in progress</p>
-            </div>
-            <div class="bottom-border"></div>
-        </main>
+        <div class="wrapper">
+            <header>
+                <div class="header--title upper">VICTOR LARSEN</div>
+                <div class="header--title lower">PORTFOLIO</div>
+                <a class="header--btn" href="./index.html">HOME</a>
+                <a class="header--btn" href="./about.html">ABOUT</a>
+                <a class="header--btn" href="./cv.html">CV</a>
+                <a class="header--btn header--btn--active" href="./work.html">WORK</a>
+            </header>
+            <main>
+                <h1>Work</h1>
+                <div class="work">
+                    <div>• fractal tree</div>
+                    <a href="https://github.com/victor-kodehode/fractal-tree">github</a>
+                    <a href="https://victor-kodehode.github.io/fractal-tree/">website</a>
+                    <div>• ping pong</div>
+                    <a href="https://github.com/victor-kodehode/ping-pong">github</a>
+                    <a href="https://victor-kodehode.github.io/ping-pong/">website</a>
+                    <div>• dashboard project</div>
+                    <a href="https://github.com/victor-kodehode/dashboard-project">github</a>
+                    <a href="https://victor-kodehode.github.io/dashboard-project/">website</a>
+                    <div>• boolean guesser game</div>
+                    <a href="https://github.com/victor-kodehode/boolean-guesser-game">github</a>
+                    <a href="https://victor-kodehode.github.io/boolean-guesser-game/">website</a>
+                    <div>• old portfolio website</div>
+                    <a href="https://github.com/victor-kodehode/old-portfolio-website">github</a>
+                    <a href="https://victor-kodehode.github.io/old-portfolio-website/">website</a>
+                    <div>• partitions of labeled elements</div>
+                    <a href="https://github.com/victor-kodehode/partitions-of-labeled-elements">github</a>
+                    <div>N/A</div>
+                    <div>• text based battle game</div>
+                    <a href="https://github.com/victor-kodehode/text-based-battle-game">github</a>
+                    <div>N/A</div>
+                </div>
+            </main>
+            <footer>
+                <div class="footer--title">CONTACT INFO</div>
+                <div class="footer--txt">victor.kodehode@gmail.com</div>
+                <a class="footer--email" href="mailto:victor.kodehode@gmail.com"><img class="footer--img" src="./images/email-icon.png" alt="email link"></a>
+                <a class="footer--github" href="https://github.com/victor-kodehode"><img class="footer--img" src="./images/github-icon.svg" alt="github link"></a>
+            </footer>
+        </div>
     </body>
 </html>
